# SoundStream

soundstream/: README.md  infer.py  main.py  pyproject.toml
soundstream/cfg/: base.yaml
soundstream/data/: common.py  maestrodata.py
soundstream/lightning/: __init__.py  data.py  model.py
soundstream/models/: __init__.py  discriminator.py  encoder_decoder.py
soundstream/utils/: loss.py
