[tool.poetry]
name = "soundstream"
version = "0.1.0"
description = ""
authors = ["eunchong-poza <eunchong@pozalabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
vector-quantize-pytorch = "^1.7.1"
torch = "1.13.1"
pytorch-lightning = "^2.0.9"
wave = "^0.0.2"
resampy = "^0.4.2"
soundfile = "^0.12.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
